refreshed notebook for model inspection

--- a/samples/tabletop/inspect_tabletop_model.ipynb
+++ b/samples/tabletop/inspect_tabletop_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mask R-CNN - Inspect Ballon Trained Model\n",
+    "# Mask R-CNN - Inspect Trained Model\n",
     "\n",
     "Code and visualizations to test, debug, and evaluate the Mask R-CNN model."
    ]
@@ -45,10 +45,11 @@
     "# Directory to save logs and trained model\n",
     "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\")\n",
     "\n",
-    "# Path to Ballon trained weights\n",
-    "# You can download this file from the Releases page\n",
-    "# https://github.com/matterport/Mask_RCNN/releases\n",
-    "TABLETOP_WEIGHTS_PATH = \"./mask_rcnn_tabletop.h5\"  # TODO: update this path"
+    "# Dataset root directory\n",
+    "DATASET_DIR = os.path.join(ROOT_DIR, \"datasets/YCB_Video_Dataset\")\n",
+    "\n",
+    "# Path to the model trained weights\n",
+    "WEIGHTS_PATH = os.path.join(MODEL_DIR, \"ycb_video_training_ycbClasses_20Kimages_20190303T1918\", \"mask_rcnn_ycb_video_training_0100.h5\")"
    ]
   },
   {
@@ -64,27 +65,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = tabletop.TabletopConfig()\n",
-    "TABLETOP_DIR = os.path.join(ROOT_DIR, \"datasets/tabletop\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Override the training configurations with a few\n",
-    "# changes for inferencing.\n",
-    "class InferenceConfig(config.__class__):\n",
-    "    # Run detection on one image at a time\n",
-    "    GPU_COUNT = 1\n",
-    "    IMAGES_PER_GPU = 1\n",
-    "    \n",
-    "    os.environ['CUDA_DEVICE_ORDER'] = 'PCI_BUS_ID'\n",
-    "    os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
+    "#config = tabletop.TabletopConfigInference()\n",
+    "config = tabletop.YCBVideoConfigInference()\n",
     "\n",
-    "config = InferenceConfig()\n",
+    "os.environ['CUDA_DEVICE_ORDER'] = 'PCI_BUS_ID'\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = config.GPU_ID\n",
+    "\n",
     "config.display()"
    ]
   },
@@ -144,13 +130,14 @@
    "outputs": [],
    "source": [
     "# Load validation dataset\n",
-    "dataset = tabletop.TabletopDataset()\n",
-    "dataset.load_tabletop(TABLETOP_DIR, \"val\")\n",
+    "#dataset = tabletop.TabletopDataset()\n",
+    "dataset = tabletop.YCBVideoDataset()\n",
+    "dataset.load_dataset(DATASET_DIR, \"val\")\n",
     "\n",
     "# Must call before using the dataset\n",
     "dataset.prepare()\n",
     "\n",
-    "print(\"Images: {}\\nClasses: {}\".format(len(dataset.image_ids), dataset.class_names))"
+    "print(\"Classes: {}\".format(dataset.class_names))"
    ]
   },
   {
@@ -180,16 +167,10 @@
    },
    "outputs": [],
    "source": [
-    "# Set path to balloon weights file\n",
-    "\n",
-    "# Download file from the Releases page and set its path\n",
-    "# https://github.com/matterport/Mask_RCNN/releases\n",
-    "weights_path = TABLETOP_WEIGHTS_PATH\n",
-    "\n",
+    "# Load weights\n",
+    "weights_path = WEIGHTS_PATH\n",
     "# Or, load the last model you trained\n",
     "#weights_path = model.find_last()\n",
-    "\n",
-    "# Load weights\n",
     "print(\"Loading weights \", weights_path)\n",
     "model.load_weights(weights_path, by_name=True)"
    ]
@@ -228,25 +209,6 @@
     "log(\"gt_class_id\", gt_class_id)\n",
     "log(\"gt_bbox\", gt_bbox)\n",
     "log(\"gt_mask\", gt_mask)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Color Splash\n",
-    "\n",
-    "This is for illustration. You can call `balloon.py` with the `splash` option to get better images without the black padding."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "splash = balloon.color_splash(image, r['masks'])\n",
-    "display_images([splash], cols=1)"
    ]
   },
   {
@@ -344,6 +306,8 @@
     "nms_node = model.ancestor(pillar, \"ROI/rpn_non_max_suppression:0\")\n",
     "if nms_node is None:\n",
     "    nms_node = model.ancestor(pillar, \"ROI/rpn_non_max_suppression/NonMaxSuppressionV2:0\")\n",
+    "if nms_node is None: #TF 1.9-1.10\n",
+    "    nms_node = model.ancestor(pillar, \"ROI/rpn_non_max_suppression/NonMaxSuppressionV3:0\")\n",
     "\n",
     "rpn = model.run_graph([image], [\n",
     "    (\"rpn_class\", model.keras_model.get_layer(\"rpn_class\").output),\n",
@@ -467,7 +431,7 @@
     "            for c, s in zip(detections[:, 4], detections[:, 5])]\n",
     "visualize.draw_boxes(\n",
     "    image, \n",
-    "    refined_boxes=detections[:, :4],\n",
+    "    refined_boxes=utils.denorm_boxes(detections[:, :4], image.shape[:2]),\n",
     "    visibilities=[2] * len(detections),\n",
     "    captions=captions, title=\"Detections\",\n",
     "    ax=get_ax())"
@@ -758,7 +722,7 @@
     "    (\"input_image\",        model.keras_model.get_layer(\"input_image\").output),\n",
     "    (\"res2c_out\",          model.keras_model.get_layer(\"res2c_out\").output),\n",
     "    (\"res3c_out\",          model.keras_model.get_layer(\"res3c_out\").output),\n",
-    "    (\"res4w_out\",          model.keras_model.get_layer(\"res4w_out\").output),  # for resnet100\n",
+    "    #(\"res4w_out\",          model.keras_model.get_layer(\"res4w_out\").output),  # for resnet100\n",
     "    (\"rpn_bbox\",           model.keras_model.get_layer(\"rpn_bbox\").output),\n",
     "    (\"roi\",                model.keras_model.get_layer(\"ROI\").output),\n",
     "])"
@@ -783,13 +747,6 @@
     "# Backbone feature map\n",
     "display_images(np.transpose(activations[\"res2c_out\"][0,:,:,:4], [2, 0, 1]), cols=4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
