fixed YCB video dataset parsing in case of unwanted classes

--- a/samples/tabletop/inspect_tabletop_data.ipynb
+++ b/samples/tabletop/inspect_tabletop_data.ipynb
@@ -42,7 +42,7 @@
     "import mrcnn.model as modellib\n",
     "from mrcnn.model import log\n",
     "\n",
-    "from samples.tabletop import tabletop\n",
+    "import tabletop\n",
     "\n",
     "%matplotlib inline "
    ]
@@ -62,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = tabletop.TabletopConfig()\n",
-    "TABLETOP_DIR = os.path.join(ROOT_DIR, \"datasets/tabletop\")"
+    "config = tabletop.YCBVideoConfigTraining()\n",
+    "DATASET_ROOT_DIR = os.path.join(ROOT_DIR, \"datasets/YCB_Video_Dataset\")"
    ]
   },
   {
@@ -81,10 +81,9 @@
    "source": [
     "# Load dataset\n",
     "# Get the dataset from the releases page\n",
-    "# https://github.com/matterport/Mask_RCNN/releases\n",
-    "dataset = tabletop.TabletopDataset()\n",
-    "print(TABLETOP_DIR)\n",
-    "dataset.load_tabletop(TABLETOP_DIR, \"train\")\n",
+    "dataset = tabletop.YCBVideoDataset()\n",
+    "print(DATASET_ROOT_DIR)\n",
+    "dataset.load_dataset(DATASET_ROOT_DIR, \"train\")\n",
     "\n",
     "# Must call before using the dataset\n",
     "dataset.prepare()\n",
@@ -108,7 +107,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
