fixed demo to work with YCB video dataset

--- a/samples/tabletop/demo.ipynb
+++ b/samples/tabletop/demo.ipynb
@@ -42,7 +42,7 @@
     "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\")\n",
     "\n",
     "# Local path to trained weights file\n",
-    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"synth_tabletop_training_ycbClasses_20Kimages_20190308T1647\", \"mask_rcnn_synth_tabletop_training_0100.h5\")\n",
+    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"ycb_video_training20190328T0952\", \"mask_rcnn_ycb_video_training_0060.h5\")\n",
     "assert os.path.exists(TRAINED_MODEL_PATH)\n",
     "\n",
     "# Directory of images to run detection on\n",
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = tabletop.TabletopConfigInference()\n",
+    "config = tabletop.YCBVideoConfigInference()\n",
     "config.DETECTION_MIN_CONFIDENCE = 0.7\n",
     "config.display()\n",
     "\n",
@@ -130,23 +130,8 @@
    "outputs": [],
    "source": [
     "dataset = tabletop.YCBVideoDataset()\n",
-    "class_names = dataset.parse_class_list(os.path.join(ROOT_DIR, \"datasets\", \"YCB_Video_Dataset\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.load_class_names(class_names)\n",
-    "for cl in dataset.class_info:\n",
-    "    print(\"ID:\", cl['id'], \"\\tName:\", cl['name'])\n",
-    "\n",
-    "class_names = dataset.class_names\n",
-    "\n",
-    "#debug statement\n",
-    "print(class_names)"
+    "dataset.load_class_names(os.path.join(ROOT_DIR, \"datasets\", \"YCB_Video_Dataset\"))\n",
+    "class_names = dataset.class_names"
    ]
   },
   {
@@ -166,8 +151,8 @@
    "source": [
     "# Load a random image from the images folder\n",
     "file_names = next(os.walk(IMAGE_DIR))[2]\n",
-    "# image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))\n",
-    "image = skimage.io.imread(os.path.join(IMAGE_DIR, '00000000.ppm'))\n",
+    "image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))\n",
+    "\n",
     "# Run detection\n",
     "results = model.detect([image], verbose=1)\n",
     "\n",
