added bit to run detection on random val set image

--- a/samples/tabletop/demo.ipynb
+++ b/samples/tabletop/demo.ipynb
@@ -43,8 +43,7 @@
     "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\")\n",
     "\n",
     "# Local path to trained weights file\n",
-    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"ycb_video_training20190611T1433\", \"mask_rcnn_ycb_video_training_0009.h5\")\n",
-
+    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"ycb_video_training20190614T1448\", \"mask_rcnn_ycb_video_training_0009.h5\")\n",
     "assert os.path.exists(TRAINED_MODEL_PATH)\n",
     "\n",
     "# Directory of images to run detection on\n",
@@ -140,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_root_dir = os.path.join(ROOT_DIR, \"datasets\", \"bottles_ycb_video_format\")\n",
+    "dataset_root_dir = os.path.join(ROOT_DIR, \"datasets\", \"bottles\")\n",
     "dataset = tabletop.YCBVideoDataset()"
    ]
   },
@@ -159,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run Object Detection"
+    "### Run Object Detection"
    ]
   },
   {
@@ -170,9 +169,33 @@
    },
    "outputs": [],
    "source": [
+    "# Load a random image from val set\n",
+    "dataset_val = tabletop.YCBVideoDataset()\n",
+    "dataset_val.load_dataset(dataset_root_dir, 'val')\n",
+    "random_val_img_info = dataset_val.image_info[random.randint(0, len(dataset_val.image_info))]\n",
+    "image = skimage.io.imread(random_val_img_info['path'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load a random image from the images folder\n",
     "file_names = next(os.walk(IMAGE_DIR))[2]\n",
-    "image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))\n",
+    "image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "# Run detection\n",
     "results = model.detect([image], verbose=1)\n",
     "\n",
@@ -181,6 +204,13 @@
     "visualize.display_instances(image, r['rois'], r['masks'], r['class_ids'], \n",
     "                            dataset.class_names, r['scores'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
