added code to the demo notebook

--- a/samples/tabletop/demo.ipynb
+++ b/samples/tabletop/demo.ipynb
@@ -34,7 +34,8 @@
     "from mrcnn import visualize\n",
     "\n",
     "# Import the tabletop dataset config\n",
-    "import tabletop\n",
+    "#import tabletop\n",
+    "import tabletop_bottles as tabletop\n",
     "\n",
     "%matplotlib inline \n",
     "\n",
@@ -42,7 +43,7 @@
     "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\")\n",
     "\n",
     "# Local path to trained weights file\n",
-    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"synth_tabletop_training_ycbClasses_20Kimages_20190308T1647\", \"mask_rcnn_synth_tabletop_training_0100.h5\")\n",
+    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"ycb_video_training20190617T2000\", \"mask_rcnn_ycb_video_training_0010.h5\")\n",
     "assert os.path.exists(TRAINED_MODEL_PATH)\n",
     "\n",
     "# Directory of images to run detection on\n",
@@ -53,11 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configurations\n",
-    "\n",
-    "We'll be using a model trained on the MS-COCO dataset. The configurations of this model are in the ```CocoConfig``` class in ```coco.py```.\n",
-    "\n",
-    "For inferencing, modify the configurations a bit to fit the task. To do so, sub-class the ```CocoConfig``` class and override the attributes you need to change."
+    "## Configurations"
    ]
   },
   {
@@ -66,7 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = tabletop.TabletopConfigInference()\n",
+    "#config = tabletop.TabletopConfigInference()\n",
+    "config = tabletop.YCBVideoConfigInference()\n",
     "config.DETECTION_MIN_CONFIDENCE = 0.7\n",
     "config.display()\n",
     "\n",
@@ -139,14 +137,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.load_class_names(class_names)\n",
-    "for cl in dataset.class_info:\n",
-    "    print(\"ID:\", cl['id'], \"\\tName:\", cl['name'])\n",
-    "\n",
-    "class_names = dataset.class_names\n",
-    "\n",
-    "#debug statement\n",
-    "print(class_names)"
+    "dataset_root_dir = os.path.join(ROOT_DIR, \"datasets\", \"bottles\")\n",
+    "dataset = tabletop.YCBVideoDataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.load_class_names(dataset_root_dir)"
    ]
   },
   {
@@ -160,21 +161,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "dataset_val = tabletop.YCBVideoDataset()\n",
+    "dataset_val.load_dataset(dataset_root_dir, 'val')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Load a random image from the images folder\n",
     "file_names = next(os.walk(IMAGE_DIR))[2]\n",
-    "# image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))\n",
-    "image = skimage.io.imread(os.path.join(IMAGE_DIR, '00000000.ppm'))\n",
-    "# Run detection\n",
-    "results = model.detect([image], verbose=1)\n",
-    "\n",
-    "# Visualize results\n",
-    "r = results[0]\n",
-    "visualize.display_instances(image, r['rois'], r['masks'], r['class_ids'], \n",
-    "                            dataset.class_names, r['scores'])"
+    "image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))"
    ]
   },
   {
@@ -182,7 +188,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load a random image from val set\n",
+    "random_val_img_info = dataset_val.image_info[random.randint(0, len(dataset_val.image_info))]\n",
+    "image = skimage.io.imread(random_val_img_info['path'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = skimage.transform.rotate(image, angle=np.random.uniform(-10, 10),\n",
+    "                           resize=False, mode='reflect')\n",
+    "\n",
+    "print(image.shape)\n",
+    "\n",
+    "\n",
+    "plt.imshow(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Run detection\n",
+    "\n",
+    "for idx in range(1,100):\n",
+    "    random_val_img_info = dataset_val.image_info[random.randint(0, len(dataset_val.image_info))]\n",
+    "    image = skimage.io.imread(random_val_img_info['path'])\n",
+    "    results = model.detect([image], verbose=1)\n",
+    "\n",
+    "    # Visualize results\n",
+    "    r = results[0]\n",
+    "    visualize.display_instances(image, r['rois'], r['masks'], r['class_ids'], \n",
+    "                                dataset.class_names, r['scores'])"
+   ]
   }
  ],
  "metadata": {
