--- a/samples/tabletop/demo.ipynb
+++ b/samples/tabletop/demo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Root directory of the project\n",
-    "ROOT_DIR = os.path.abspath(\"../../\")\n",
+    "ROOT_DIR = os.path.abspath(\"../\")\n",
     "\n",
     "# Import Mask RCNN\n",
     "sys.path.append(ROOT_DIR)  # To find local version of the library\n",
@@ -34,8 +34,7 @@
     "from mrcnn import visualize\n",
     "\n",
     "# Import the tabletop dataset config\n",
-    "#import tabletop\n",
-    "import tabletop_bottles as tabletop\n",
+    "import humanoids_pouring.tabletop_bottles as tabletop\n",
     "\n",
     "%matplotlib inline \n",
     "\n",
@@ -59,13 +58,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'humanoids_pouring.tabletop_bottles' has no attribute 'YCBVideoConfigInference'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-ba6d3c49d1f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#config = tabletop.TabletopConfigInference()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mconfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtabletop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mYCBVideoConfigInference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDETECTION_MIN_CONFIDENCE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'humanoids_pouring.tabletop_bottles' has no attribute 'YCBVideoConfigInference'"
+     ]
+    }
+   ],
    "source": [
     "#config = tabletop.TabletopConfigInference()\n",
     "config = tabletop.YCBVideoConfigInference()\n",
-    "config.DETECTION_MIN_CONFIDENCE = 0.7\n",
+    "config.DETECTION_MIN_CONFIDENCE = 0.5\n",
     "config.display()\n",
     "\n",
     "os.environ['CUDA_DEVICE_ORDER'] = 'PCI_BUS_ID'\n",
@@ -144,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "dataset.load_class_names(dataset_root_dir)"
@@ -180,7 +193,8 @@
    "source": [
     "# Load a random image from the images folder\n",
     "file_names = next(os.walk(IMAGE_DIR))[2]\n",
-    "image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))"
+    "#image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))\n",
+    "image = skimage.io.imread(os.path.join(IMAGE_DIR, '000001-color.png'))"
    ]
   },
   {
@@ -197,21 +211,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = skimage.transform.rotate(image, angle=np.random.uniform(-10, 10),\n",
-    "                           resize=False, mode='reflect')\n",
-    "\n",
-    "print(image.shape)\n",
-    "\n",
-    "\n",
-    "plt.imshow(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -219,15 +218,12 @@
    "source": [
     "# Run detection\n",
     "\n",
-    "for idx in range(1,100):\n",
-    "    random_val_img_info = dataset_val.image_info[random.randint(0, len(dataset_val.image_info))]\n",
-    "    image = skimage.io.imread(random_val_img_info['path'])\n",
-    "    results = model.detect([image], verbose=1)\n",
+    "results = model.detect([image], verbose=1)\n",
     "\n",
-    "    # Visualize results\n",
-    "    r = results[0]\n",
-    "    visualize.display_instances(image, r['rois'], r['masks'], r['class_ids'], \n",
-    "                                dataset.class_names, r['scores'])"
+    "# Visualize results\n",
+    "r = results[0]\n",
+    "visualize.display_instances(image, r['rois'], r['masks'], r['class_ids'], \n",
+    "                            dataset.class_names, r['scores'])"
    ]
   }
  ],
