--- a/samples/humanoids_pouring/demo.ipynb
+++ b/samples/humanoids_pouring/demo.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mask R-CNN Tabletop Demo\n",
-    "\n",
-    "A quick intro to using the pre-trained model to detect and segment objects."
+    "# Mask R-CNN Demo"
    ]
   },
   {
@@ -42,7 +40,7 @@
     "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\")\n",
     "\n",
     "# Local path to trained weights file\n",
-    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"ycb_video_training20190617T2000\", \"mask_rcnn_ycb_video_training_0010.h5\")\n",
+    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"bottles/bottles_exp_2\", \"mask_rcnn_bottles_0030.h5\")\n",
     "assert os.path.exists(TRAINED_MODEL_PATH)\n",
     "\n",
     "# Directory of images to run detection on\n",
@@ -74,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Model and Load Trained Weights"
+    "## Create model and load trained weights"
    ]
   },
   {
@@ -96,13 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class Names\n",
-    "\n",
-    "The model classifies objects and returns class IDs, which are integer value that identify each class. Some datasets assign integer values to their classes and some don't. For example, in the MS-COCO dataset, the 'person' class is 1 and 'teddy bear' is 88. The IDs are often sequential, but not always. The COCO dataset, for example, has classes associated with class IDs 70 and 72, but not 71.\n",
-    "\n",
-    "To improve consistency, and to support training on data from multiple sources at the same time, our ```Dataset``` class assigns it's own sequential integer IDs to each class. For example, if you load the COCO dataset using our ```Dataset``` class, the 'person' class would get class ID = 1 (just like COCO) and the 'teddy bear' class is 78 (different from COCO). Keep that in mind when mapping class IDs to class names.\n",
-    "\n",
-    "To get the list of class names, you'd load the dataset and then use the ```class_names``` property like this."
+    "## Load Validation dataset and classes"
    ]
   },
   {
@@ -112,28 +104,15 @@
    "outputs": [],
    "source": [
     "dataset_root_dir = os.path.join(ROOT_DIR, \"datasets\", \"bottles\")\n",
-    "dataset = tabletop.datasets.YCBVideoDataset()\n",
-    "dataset.load_class_names(dataset_root_dir)"
+    "dataset_val = tabletop.datasets.YCBVideoDataset()\n",
+    "dataset_val.load_dataset(dataset_root_dir, 'val')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run Object Detection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Load a random image from the images folder\n",
-    "file_names = next(os.walk(IMAGE_DIR))[2]\n",
-    "image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))"
+    "## Load image to run detection on"
    ]
   },
   {
@@ -155,14 +134,33 @@
    },
    "outputs": [],
    "source": [
-    "# Run detection\n",
-    "\n",
+    "# Load a random image from the images folder\n",
+    "file_names = next(os.walk(IMAGE_DIR))[2]\n",
+    "image = skimage.io.imread(os.path.join(IMAGE_DIR, random.choice(file_names)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run object detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run detection    \n",
     "results = model.detect([image], verbose=1)\n",
     "\n",
     "# Visualize results\n",
     "r = results[0]\n",
     "visualize.display_instances(image, r['rois'], r['masks'], r['class_ids'], \n",
-    "                            dataset.class_names, r['scores'])"
+    "                            dataset_val.class_names, r['scores'])"
    ]
   }
  ],
