added time logging for demo script

--- a/samples/humanoids_pouring/demo.ipynb
+++ b/samples/humanoids_pouring/demo.ipynb
@@ -40,7 +40,7 @@
     "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\")\n",
     "\n",
     "# Local path to trained weights file\n",
-    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"bottles/bottles_exp_2\", \"mask_rcnn_bottles_0030.h5\")\n",
+    "TRAINED_MODEL_PATH = os.path.join(MODEL_DIR, \"bottles/bottles_exp_4\", \"mask_rcnn_bottles_0040.h5\")\n",
     "assert os.path.exists(TRAINED_MODEL_PATH)\n",
     "\n",
     "# Directory of images to run detection on\n",
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "config = tabletop.configurations.YCBVideoConfigInference()\n",
-    "config.DETECTION_MIN_CONFIDENCE = 0.5\n",
+    "config.DETECTION_MIN_CONFIDENCE = 0.8\n",
     "config.display()\n",
     "\n",
     "os.environ['CUDA_DEVICE_ORDER'] = 'PCI_BUS_ID'\n",
@@ -150,12 +150,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Run detection    \n",
+    "# Run detection\n",
+    "import time\n",
+    "start_time = time.time()\n",
+    "\n",
     "results = model.detect([image], verbose=1)\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "\n",
     "# Visualize results\n",
     "r = results[0]\n",
